[project]
name = "tokenifier"
version = "0.1.0"
description = "Per-turn context budget visualiser for Claude Code session transcripts"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
    "typer>=0.9",
]

[project.scripts]
tokenifier = "tokenifier.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tokenifier"]
